<resources>
    <string name="app_name">Quizzify</string>
    <string name="app_name_upper_case">QUIZZIFY</string>
    <string name="home">Home</string>
    <string name="questions">Questions</string>
    <string name="graduation">Graduation Cap Icon</string>
    <string name="add_question">Add Question FAB</string>
    <string name="launch_quiz">Launch Quiz FAB</string>
    <string name="reading_book_illustration">Illustration of a person reading a book</string>
    <string name="jumping_dog_illustration">Illustration of a person and a dog</string>
    <string name="submit_icon">Submit answer icon</string>
    <string name="chasing_papers">Illustration of a person chasing pieces of paper</string>
    <string name="options">options</string>
    <string name="delete_question_button">Delete Question Button</string>
    <string name="edit_question_button">Edit Question Button</string>
    <string name="expand_question_button">Expand Question Button</string>
    <string name="correct_answer_checkmark_icon">Correct Answer Checkmark Icon</string>
    <string name="collapse_question_button">Collapse Question Button</string>
    <string name="add_questions_title">Add Questions to Bank?</string>
    <string name="empty_question_bank_description">Your question bank is currently empty. You need to add questions before you can start a quiz.</string>
    <string name="ok_dialog_button">OK</string>
    <string name="not_now_dialog_button">Not Now</string>
    <string name="rules_title">Rules:</string>
    <string name="timer_icon">Timer Icon</string>
    <string name="score_at_end_rule">Score shown at the end; quiz ends when all questions are answered</string>
    <string name="random_question_order_rule">Questions are displayed in a random order</string>
    <string name="skip_question_rule">Skipping a question counts as an incorrect answer</string>
    <string name="shuffle_icon">Shuffle Icon</string>
    <string name="skip_icon">Skip Icon</string>
    <string name="edit_question_title">Edit Question</string>
    <string name="add_question_title">Add Question</string>
    <string name="back_button">Back</string>
    <string name="save_button">Save</string>
    <string name="question_label">Question</string>
    <string name="optional_subject_label">Subject (optional)</string>
    <string name="option_label">Option</string>
    <string name="remove_option_button">Remove option</string>
    <string name="add_option_button">Add Option</string>
    <string name="empty_question_bank">Empty Question Bank!</string>
    <string name="add_question_to_bank">No questions added yet. Tap the plus button to create your first question.</string>
    <string name="quiz_completed">Quiz Completed!</string>
    <string name="view_score">View Score</string>
    <string name="next_question">Next Question</string>
    <string name="finish">Finish</string>
    <string name="question">Question</string>
    <string name="of">of</string>
    <string name="score">Score</string>
</resources>