...

val cellPowerhouseQuestion = Question(
    id = 3,
    questionText = "Which organelle is known as the powerhouse of the cell",
    subject = "Biology",

    option1 = "Mitochondria",
    option2 = "Cell Wall",
    option3 = "Ribosome",
    option4 = "Chloroplast",

    correctAnswer = "Mitochondria"
)
...
